# UAE-CollegeGuide

./: .replit  __init__.py  helper.py  main.py  majors.py  pyproject.toml  quiz.py  universities.py
