[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Lamar Yasin=lamaryassin2010@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit-extras = "^0.5.0"
streamlit = "^1.41.1"
streamlit-lottie = "^0.0.5"

[tool.poetry.dev-dependencies]
# Add any development dependencies here (e.g., pytest)
